--- a/index.html
+++ b/index.html
@@ -3,9 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=we, initial-scale=1.0">
-    <title>Document</title>
+    <title>web development portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles/portfolio.css">
 </head>
 <body>
     <p>web developer portfolio</p>
+    <header>
+        <nav>
+            <h3 class="nav-title">Ma<span class="text-primary">r</span>y</h3>
+            <ul>
+                <li><a href="">port folio</a></li>
+                <li><a href="">blog</a></li>
+                <li><button class="btn-primary"> hire me </button></li>
+            </ul>
+        </nav>
+    </header>
 </body>
 </html>
