--- a/index.html
+++ b/index.html
@@ -11,15 +11,30 @@
 </head>
 <body>
     <p>web developer portfolio</p>
-    <header>
-        <nav>
+    <header class="header">
+    <nav>
             <h3 class="nav-title">Ma<span class="text-primary">r</span>y</h3>
             <ul>
                 <li><a href="">port folio</a></li>
                 <li><a href="">blog</a></li>
                 <li><button class="btn-primary"> hire me </button></li>
             </ul>
-        </nav>
+    </nav>
+        <div class="banner">
+           <div>
+              <h1 class="banner-grettings">hi, i am </h1>
+              <h3 class="banner-title">Mary Hardy</h3>
+              <p>Shot what able cold new see hold.
+                 Friendly as an betrayed formerly he.
+                 Morning because as to society behaved moments.
+              </p>
+              <button class="btn-primary">download cv</button>
+              <button class="btn-primary">contact</button>
+           </div>
+           <img class="profile-pic" src="images/hardy.png" alt="">
+
+
+
     </header>
 </body>
 </html>
