--- a/index.html
+++ b/index.html
@@ -177,6 +177,12 @@
    </div>
     <div class="footer-column">
         <h3 class="section-title">lets message me</h3>
+        <form class="contact-column" action="">
+            <input type="text" name="text" id="">
+            <input type="email" name="email" id="">
+            <textarea name="" id="" cols="30" rows="10">message</textarea>
+            <input type="submit" value="submit">
+        </form>
     </div>
 
 </footer>
